--- a/examples/react-express/app/index.ejs
+++ b/examples/react-express/app/index.ejs
@@ -1,7 +1,11 @@
 <head>
+	<link rel="stylesheet" href="bower_components/skeleton/css/normalize.css">
+	<link rel="stylesheet" href="bower_components/skeleton/css/skeleton.css">
 	<link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-	<div id="app"></div>
+	<div class="container">
+		<div id="app"></div>
+	</div>
 	<script src="app.js"></script>
 </body>
