--- a/examples/react-express/app/index.ejs
+++ b/examples/react-express/app/index.ejs
@@ -1,11 +1,12 @@
 <head>
+    <title>Shopping list</title>
 	<link rel="stylesheet" href="bower_components/skeleton/css/normalize.css">
 	<link rel="stylesheet" href="bower_components/skeleton/css/skeleton.css">
 	<link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 	<div class="container">
-		<div id="app"></div>
+		<div id="app"><%- reactOutput %></div>
 	</div>
 	<script src="app.js"></script>
 </body>
